force-app/main/default/objects/Student__c/fields/Are_you_a_fresher__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_fresher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you a fresher</label>
    <type>Checkbox</type>
</CustomField>