force-app/main/default/objects/Student__c/fields/Are_you_placed__c.field-meta.xml
<CustomField>
    <fullName>Are_you_placed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you placed?</label>
    <type>Checkbox</type>
</CustomField>