force-app/main/default/objects/Student__c/fields/First_Year__c.field-meta.xml
<CustomField>
    <fullName>First_Year__c</fullName>
    <label>First Year %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>