force-app/main/default/objects/Student__c/fields/HOD__c.field-meta.xml
<CustomField>
    <fullName>HOD__c</fullName>
    <label>HOD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr. A</fullName>
            </value>
            <value>
                <fullName>Mr. B</fullName>
            </value>
            <value>
                <fullName>Mr. C</fullName>
            </value>
            <value>
                <fullName>Mr. D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>