force-app/main/default/objects/Student__c/fields/Maximum_Rating__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Rating__c</fullName>
    <label>Maximum Rating</label>
    <summarizedField>Rating__c.Total_rating_out_of_50__c</summarizedField>
    <summaryForeignKey>Rating__c.Student__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>