force-app/main/default/objects/Student__c/fields/Minimum_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Ratings__c</fullName>
    <label>Minimum Ratings</label>
    <summarizedField>Rating__c.Total_rating_out_of_50__c</summarizedField>
    <summaryForeignKey>Rating__c.Student__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>