force-app/main/default/objects/Student__c/fields/Profile_Status__c.field-meta.xml
<CustomField>
    <fullName>Profile_Status__c</fullName>
    <formula>IF( ISBLANK( Student_Name__c ) , 0.00, 0.20)  +  IF( ISBLANK(  Student_Email__c  ) , 0.00, 0.20)  +  IF( ISBLANK(  Student_Phone__c ) , 0.00, 0.20)  +  IF( ISNULL(  Student_Deposit_Fees__c ) , 0.00, 0.20)</formula>
    <label>Profile Status</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>