force-app/main/default/objects/Student__c/fields/Profile_status_complete__c.field-meta.xml
<CustomField>
    <fullName>Profile_status_complete__c</fullName>
    <formula>IF( ISBLANK( Student_Name__c ) , 0.00, 0.20) + IF( ISBLANK(  Student_Email__c  ) , 0.00, 0.20) + IF( ISBLANK(   Student_Phone__c   ) , 0.00, 0.20) + IF( ISBLANK(  Student_DOB__c  ) , 0.00, 0.20) + IF(  ISPICKVAL(  Student_Year__c  , &quot;&quot;)  , 0.00, 0.20)</formula>
    <label>Profile status complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>