force-app/main/default/objects/Student__c/fields/Ratings__c.field-meta.xml
<CustomField>
    <fullName>Ratings__c</fullName>
    <label>Ratings</label>
    <summarizedField>Rating__c.Total_rating_out_of_50__c</summarizedField>
    <summaryForeignKey>Rating__c.Student__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>