force-app/main/default/objects/Student__c/fields/Second_Year_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Second_Year_Percentage__c</fullName>
    <label>Second Year Percentage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>