force-app/main/default/objects/Student__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <label>Semester</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Student_Year__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1ST SEM</fullName>
            </value>
            <value>
                <fullName>2ND SEM</fullName>
            </value>
            <value>
                <fullName>3RD SEM</fullName>
            </value>
            <value>
                <fullName>4TH SEM</fullName>
            </value>
            <value>
                <fullName>5TH SEM</fullName>
            </value>
            <value>
                <fullName>6TH SEM</fullName>
            </value>
            <value>
                <fullName>7TH SEM</fullName>
            </value>
            <value>
                <fullName>8TH SEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>