force-app/main/default/objects/Student__c/fields/Seminar__c.field-meta.xml
<CustomField>
    <fullName>Seminar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seminar?</label>
    <type>Checkbox</type>
</CustomField>