force-app/main/default/objects/Student__c/fields/Student_Age__c.field-meta.xml
<CustomField>
    <fullName>Student_Age__c</fullName>
    <formula>YEAR( TODAY() )  -  YEAR( Student_DOB__c )</formula>
    <label>Student Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>