force-app/main/default/objects/Student__c/fields/Student_Deposit_Fees__c.field-meta.xml
<CustomField>
    <fullName>Student_Deposit_Fees__c</fullName>
    <label>Student Deposit Fees</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>