force-app/main/default/objects/Student__c/fields/Student_Reg_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Student_Reg_Date_and_Time__c</fullName>
    <label>Student Reg Date and Time</label>
    <type>DateTime</type>
</CustomField>