force-app/main/default/objects/Student__c/fields/Student_Remaining_Fees__c.field-meta.xml
<CustomField>
    <fullName>Student_Remaining_Fees__c</fullName>
    <formula>Student_Total_Fees__c  -  Student_Deposit_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Remaining Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>