force-app/main/default/objects/Student__c/fields/Student_State__c.field-meta.xml
<CustomField>
    <fullName>Student_State__c</fullName>
    <label>Student State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>