force-app/main/default/objects/Student__c/fields/Student_Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>Student_Total_Fees__c</fullName>
    <defaultValue>50000.00</defaultValue>
    <label>Student Total Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>