force-app/main/default/objects/Student__c/fields/Student_Year__c.field-meta.xml
<CustomField>
    <fullName>Student_Year__c</fullName>
    <label>Student Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First year</fullName>
                <default>true</default>
                <label>First year</label>
            </value>
            <value>
                <fullName>Second year</fullName>
            </value>
            <value>
                <fullName>Third year</fullName>
            </value>
            <value>
                <fullName>Fourth year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>