force-app/main/default/objects/Student__c/fields/Students_location__c.field-meta.xml
<CustomField>
    <fullName>Students_location__c</fullName>
    <label>Students location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>