force-app/main/default/objects/Student__c/fields/Third_year__c.field-meta.xml
<CustomField>
    <fullName>Third_year__c</fullName>
    <label>Third year %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>