force-app/main/default/objects/Student__c/fields/X10th_Percentage__c.field-meta.xml
<CustomField>
    <fullName>X10th_Percentage__c</fullName>
    <label>10th Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>