force-app/main/default/objects/Student__c/recordTypes/Final_Year.recordType-meta.xml
<RecordType>
    <fullName>Final_Year</fullName>
    <active>true</active>
    <label>Final Year</label>
</RecordType>