force-app/main/default/objects/Student__c/recordTypes/First_Year.recordType-meta.xml
<RecordType>
    <fullName>First_Year</fullName>
    <active>true</active>
    <label>First Year</label>
</RecordType>