force-app/main/default/objects/Student__c/recordTypes/Second_Year.recordType-meta.xml
<RecordType>
    <fullName>Second_Year</fullName>
    <active>true</active>
    <label>Second Year</label>
</RecordType>