force-app/main/default/objects/Student__c/recordTypes/Third_year.recordType-meta.xml
<RecordType>
    <fullName>Third_year</fullName>
    <active>true</active>
    <label>Third year</label>
</RecordType>