force-app/main/default/objects/Student__c/validationRules/First_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Validation_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>Student_Deposit_Fees__c &lt;10000    ||   Student_Deposit_Fees__c &gt; 500000</errorConditionFormula>
    <errorMessage>Please Deposit more that 10000 Rs and less than 500000</errorMessage>
</ValidationRule>