force-app/main/default/objects/Student__c/validationRules/Validation_for_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_number</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(Student_Phone__c) != 10</errorConditionFormula>
    <errorMessage>Invalid Phone Number</errorMessage>
</ValidationRule>