force-app/main/default/objects/Student__c/listViews/First_Year_Student.listView-meta.xml
<ListView>
    <fullName>First_Year_Student</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>First Year Student</label>
</ListView>