force-app/main/default/objects/Student__c/listViews/First_year_student2.listView-meta.xml
<ListView>
    <fullName>First_year_student2</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Student_Year__c</field>
        <operation>equals</operation>
        <value>First year</value>
    </filters>
    <label>First year student2</label>
</ListView>